--- a/AIProject/AIProject/AIProject.csproj
+++ b/AIProject/AIProject/AIProject.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="cGameBoard.cs" />
     <Compile Include="cKing.cs" />
+    <Compile Include="cKnight.cs" />
     <Compile Include="cPawn.cs" />
     <Compile Include="cPiece.cs" />
     <Compile Include="IPiece.cs" />
