--- a/AIProject/AIProject/AIProject.csproj
+++ b/AIProject/AIProject/AIProject.csproj
@@ -43,14 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cBishop.cs" />
     <Compile Include="cGameBoard.cs" />
     <Compile Include="cKing.cs" />
     <Compile Include="cKnight.cs" />
     <Compile Include="cPawn.cs" />
     <Compile Include="cPiece.cs" />
+    <Compile Include="cQueen.cs" />
+    <Compile Include="cRook.cs" />
     <Compile Include="IPiece.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmartAgent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
