--- a/AIProject/UnitTestProject1/AIProjectTests.csproj
+++ b/AIProject/UnitTestProject1/AIProjectTests.csproj
@@ -53,6 +53,11 @@
     <Compile Include="cKingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cPawnTests.cs" />
+    <Compile Include="cKnightTests.cs" />
+    <Compile Include="cRookTests.cs" />
+    <Compile Include="cBishopTests.cs" />
+    <Compile Include="cQueenTests.cs" />
+    <Compile Include="cSmartAgentTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
