general refactoring and unit testing

--- a/AIProject/UnitTestProject1/AIProjectTests.csproj
+++ b/AIProject/UnitTestProject1/AIProjectTests.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cGameBoardTests.cs" />
     <Compile Include="cKingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cPawnTests.cs" />
