Added potentialMove object

--- a/AIProject/AIProject/AIProject.csproj
+++ b/AIProject/AIProject/AIProject.csproj
@@ -49,6 +49,7 @@
     <Compile Include="cKnight.cs" />
     <Compile Include="cPawn.cs" />
     <Compile Include="cPiece.cs" />
+    <Compile Include="cPotentialMove.cs" />
     <Compile Include="cQueen.cs" />
     <Compile Include="cRook.cs" />
     <Compile Include="IPiece.cs" />
