--- a/AIProject/UnitTestProject1/AIProjectTests.csproj
+++ b/AIProject/UnitTestProject1/AIProjectTests.csproj
@@ -50,15 +50,31 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cGameBoardTests.cs" />
-    <Compile Include="cKingTests.cs" />
+    <Compile Include="cGameBoardTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cKingTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="cPawnTests.cs" />
-    <Compile Include="cKnightTests.cs" />
-    <Compile Include="cRookTests.cs" />
-    <Compile Include="cBishopTests.cs" />
-    <Compile Include="cQueenTests.cs" />
-    <Compile Include="cSmartAgentTests.cs" />
+    <Compile Include="cPawnTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cKnightTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cRookTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cBishopTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cQueenTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="cSmartAgentTests.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
